--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
                         </div>
                     </div>
 
-                    <!-- Project 4: PollPulse -->
+                    <!-- Project 4: Weather Whishper -->
                     <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover">
                         <div class="relative aspect-video overflow-hidden">
-                            <img src="https://i.ibb.co/sdmML6GN/hq720.jpg">
+                            <img src="https://i.ibb.co/sdmML6GN/hq720.jpg" alt="Weather Whishper" class="w-full h-full object-cover hover-scale">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2">Weather Whishper</h3>
