--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold mb-12 text-center">Projects</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-7xl mx-auto">
-                    <!-- Project 1 -->
+                    
+                    <!-- Project 1: Attendance WebApp -->
                     <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover">
                         <div class="relative aspect-video overflow-hidden">
                             <img src="https://t3.ftcdn.net/jpg/01/25/05/50/360_F_125055050_loLfRxF2fJi5Ge0t49jmaIMBUhlmchwE.jpg" alt="Attendance WebApp" class="w-full h-full object-cover hover-scale">
@@ -281,7 +282,7 @@
                         </div>
                     </div>
 
-                    <!-- Project 2 -->
+                    <!-- Project 2: Todo List Web App -->
                     <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover">
                         <div class="relative aspect-video overflow-hidden">
                             <img src="https://images.unsplash.com/photo-1540350394557-8d14678e7f91?w=800&q=80" alt="Todo List Web App" class="w-full h-full object-cover hover-scale">
@@ -362,10 +363,10 @@
                         </div>
                     </div>
 
-                    <!-- Project 4: Weather Whishper -->
+                    <!-- Project 5: Swift Rate Tracker -->
                     <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover">
                         <div class="relative aspect-video overflow-hidden">
-                            <img src="https://i.ibb.co/8nkVskmc/currency-converter-slides-Logo.jpg" alt="Weather Whishper" class="w-full h-full object-cover hover-scale">
+                            <img src="https://i.ytimg.com/vi/t0W5r03sm_U/maxresdefault.jpg" alt="Weather Whishper" class="w-full h-full object-cover hover-scale">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2">Swift Rate Tracker</h3>
@@ -389,7 +390,7 @@
                         </div>
                     </div>
                     
-                    <!-- Project 5: Project Showcase -->
+                    <!-- Project 6: Project Showcase -->
                     <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover flex flex-col h-full">
                         <div class="relative aspect-video overflow-hidden">
                             <img src="https://cdn.dribbble.com/userupload/43330865/file/original-f88e03dddfa4a682a95ccca17085f045.png?resize=1504x1533&vertical=center" alt="Photo Gallery Website" class="w-full h-full object-cover hover-scale">
