--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             </div>
                             <p class="text-sm text-gray-400 mb-6">A modern attendance tracking system with a clean UI and animations. Built with HTML, CSS, and JavaScript.</p>
                             <div class="flex justify-between items-center">
-                                <a href="https://attendancewebapp.tiiny.site" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
+                                <a href="https://shankar2006458.github.io/attendance-web-app/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
                                         <circle cx="12" cy="12" r="3"/>
