--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="w-full md:w-2/5 flex justify-center items-center">
                         <div class="relative w-48 h-48 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-blue-400 bg-gradient-to-br from-blue-500/20 to-purple-600/20 shadow-xl hover:scale-105 transition-transform duration-300">
-                            <img src="https://i.ibb.co/1s4J04Q/IMG-20240517-WA0008.jpg" alt="Profile" class="w-full h-full object-cover rounded-full" />
+                            <img src="https://i.ibb.co/gbBNBDPv/IMG2006.jpg" alt="Profile" class="w-full h-full object-cover rounded-full" />
                         </div>
                     </div>
                 </div>
