--- a/index.html
+++ b/index.html
@@ -118,14 +118,15 @@
                         <p class="text-sm md:text-base text-gray-300 max-w-xl">
                             I'm a Web Developer passionate about crafting user-centered digital experiences. I combine design thinking with technical skills to create intuitive, accessible, and visually appealing interfaces that solve real problems and delight users.
                         </p>
-                        <button onclick="scrollToProjects()" class="bg-gradient-to-r from-blue-500 to-purple-600 hover:from-blue-600 hover:to-purple-700 text-white px-8 py-3 rounded-full transition-all duration-300 flex items-center gap-2">
-                            Download CV 
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <a href="https://shankar2006458.github.io/portfolio/Shankar_CV.pdf" download
+                        class="bg-gradient-to-r from-blue-500 to-purple-600 hover:from-blue-600 hover:to-purple-700 text-white px-4 py-4 rounded-full transition-all duration-300 inline-flex items-center gap-1 w-fit">
+                            Download CV
+                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                 <polyline points="7,10 12,15 17,10"/>
                                 <line x1="12" y1="15" x2="12" y2="3"/>
                             </svg>
-                        </button>
+                        </a>
                     </div>
                     <div class="w-full md:w-2/5 flex justify-center items-center">
                         <div class="relative w-48 h-48 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-blue-400 bg-gradient-to-br from-blue-500/20 to-purple-600/20 shadow-xl hover:scale-105 transition-transform duration-300">
