--- a/index.html
+++ b/index.html
@@ -527,7 +527,12 @@
 
         <!-- Contact Section -->
         <section id="contact" class="container mx-auto px-4 py-16 animate-slide-up">
-            <h2 class="text-3xl font-bold mb-8 text-center">Contact me</h2>
+            <video autoplay muted loop playsinline class="absolute top-0 left-0 w-full h-full object-cover z-0 opacity-100">
+                <source src="https://raw.githubusercontent.com/shankar2006458/portfolio/main/binary-code-falling.1920x1080.mp4" type="video/mp4">
+            </video>
+            <div class="absolute inset-0 bg-black/50 z-0"></div>
+            <h2 class="text-3xl font-bold mb-8 text-center relative z-10">Contact me</h2>
+            <div class="text-center max-w-2xl mx-auto relative z-10">
             <div class="text-center max-w-2xl mx-auto">
                 <p class="text-gray-400 mb-8 text-lg">
                     Feel free to reach out for my openings, and opportunities!
