--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                             </div>
                             <p class="text-sm text-gray-400 mb-6 flex-1">Sleek and responsive project hub featuring animated cards, smooth scrolling, and a clean layout — explore all my creations in one place.</p>
                             <div class="flex justify-between items-center mt-auto">
-                                <a href="https://showcase24.netlify.app/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
+                                <a href="https://shankar2006458.github.io/project-opener/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
                                         <circle cx="12" cy="12" r="3"/>
