--- a/index.html
+++ b/index.html
@@ -309,8 +309,6 @@
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-orange-500/20 text-orange-400 border border-orange-500/30">HTML</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-400 border border-yellow-500/30">JavaScript</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-blue-500/20 text-blue-400 border border-blue-500/30">CSS</span>
-                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-green-500/20 text-green-400 border border-green-500/30">LocalStorage</span>
-                            </div>
                             <p class="text-sm text-gray-400 mb-6">A beautiful, category-based todo app with local storage, real-time validation, and smooth UI animations.</p>
                             <div class="flex justify-between items-center">
                                 <a href="https://shankar2006458.github.io/Task-Master/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
@@ -496,7 +494,6 @@
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-orange-500/20 text-orange-400 border border-orange-500/30">HTML</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-400 border border-yellow-500/30">JavaScript</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-blue-500/20 text-blue-400 border border-blue-500/30">CSS</span>
-                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-green-500/20 text-green-400 border border-green-500/30">LocalStorage</span>
                             </div>
                             <p class="text-sm text-gray-400 mb-6">A fun and interactive age calculator with real-time inputs, milestone countdowns, life progress visualization, and smooth UI — all built with HTML, CSS, and JavaScript.</p>
                             <div class="flex justify-between items-center">
@@ -523,7 +520,6 @@
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-orange-500/20 text-orange-400 border border-orange-500/30">HTML</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-400 border border-yellow-500/30">JavaScript</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-blue-500/20 text-blue-400 border border-blue-500/30">CSS</span>
-                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-green-500/20 text-green-400 border border-green-500/30">LocalStorage</span>
                             </div>
                             <p class="text-sm text-gray-400 mb-6">A fun and creative Daily Code Challenge Generator with random prompt generation, category filters, fresh ideas for every day, and a clean, animated UI — all built with HTML, CSS, and JavaScript.</p>
                             <div class="flex justify-between items-center">
@@ -565,8 +561,36 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Project 12: Guess the Gibberish -->
+                    <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover hidden more-project">
+                        <div class="relative aspect-video overflow-hidden">
+                            <img src="https://uploads.quizalize.com/2622ff6f-443b-49f0-b47b-48098894111d/quiz/87572feb6b5383f8fa4cb7179c52b82005aff49b.png" alt="Guess the Gibberish" class="w-full h-full object-cover hover-scale">
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-semibold mb-2">Guess the Gibberish</h3>
+                            <div class="flex flex-wrap gap-2 mb-4">
+                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-orange-500/20 text-orange-400 border border-orange-500/30">HTML</span>
+                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-400 border border-yellow-500/30">JavaScript</span>
+                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-blue-500/20 text-blue-400 border border-blue-500/30">CSS</span>
+                            </div>
+                            <p class="text-sm text-gray-400 mb-6">
+                                A fun and fast-paced "Guess the Gibberish" game with multiple levels, real-time input checking, animated transitions, score tracking, and a clean responsive UI
+                            </p>
+                            <div class="flex justify-between items-center">
+                                <a href="https://shankar2006458.github.io/Guess-the-Gibberish/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                                        <circle cx="12" cy="12" r="3"/>
+                                    </svg>
+                                    View Project
+                                </a>
+                                <!-- Arrow button removed -->
+                            </div>
+                        </div>
+                    </div>
                     
-                    <!-- Project 11: Project Showcase -->
+                    <!-- Project 13: Project Showcase -->
                     <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover flex flex-col h-full hidden more-project">
                         <div class="relative aspect-video overflow-hidden">
                             <img src="https://cdn.dribbble.com/userupload/43330865/file/original-f88e03dddfa4a682a95ccca17085f045.png?resize=1504x1533&vertical=center" alt="Photo Gallery Website" class="w-full h-full object-cover hover-scale">
