--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-orange-500/20 text-orange-400 border border-orange-500/30">HTML</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-400 border border-yellow-500/30">JavaScript</span>
                                 <span class="inline-block px-3 py-1 text-xs rounded-full bg-blue-500/20 text-blue-400 border border-blue-500/30">CSS</span>
+                            </div>
                             <p class="text-sm text-gray-400 mb-6">A beautiful, category-based todo app with local storage, real-time validation, and smooth UI animations.</p>
                             <div class="flex justify-between items-center">
                                 <a href="https://shankar2006458.github.io/Task-Master/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
