--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         <p class="text-sm md:text-base text-gray-300 max-w-xl">
                             I'm a Web Developer passionate about crafting user-centered digital experiences. I combine design thinking with technical skills to create intuitive, accessible, and visually appealing interfaces that solve real problems and delight users.
                         </p>
-                        <a href="https://shankar2006458.github.io/portfolio/Shankar_CV.pdf" download
+                        <a href="https://raw.githubusercontent.com/shankar2006458/portfolio/main/My CV_Resume.pdf" download
                         class="bg-gradient-to-r from-blue-500 to-purple-600 hover:from-blue-600 hover:to-purple-700 text-white px-4 py-4 rounded-full transition-all duration-300 inline-flex items-center gap-1 w-fit">
                             Download CV
                             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -1334,3 +1334,4 @@
 
 </body>
 </html>
+
