--- a/index.html
+++ b/index.html
@@ -829,8 +829,36 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Project 16: Password Generator -->
+                    <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover hidden more-project">
+                        <div class="relative aspect-video overflow-hidden">
+                            <img src="https://guptadeepak.com/content/images/size/w2000/2024/11/AI-Password-Generator.png" alt="Password Generator" class="w-full h-full object-cover hover-scale">
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-semibold mb-2">Password Generator</h3>
+                            <div class="flex flex-wrap gap-2 mb-4">
+                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-orange-500/20 text-orange-400 border border-orange-500/30">HTML</span>
+                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-400 border border-yellow-500/30">JavaScript</span>
+                                <span class="inline-block px-3 py-1 text-xs rounded-full bg-blue-500/20 text-blue-400 border border-blue-500/30">CSS</span>
+                            </div>
+                            <p class="text-sm text-gray-400 mb-6">
+                                A clean and lightweight password generator that instantly creates strong, customizable passwords, designed for quick use with a smooth, distraction-free interface.
+                            </p>
+                            <div class="flex justify-between items-center">
+                                <a href="https://shankar2006458.github.io/passwordgenerator/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 px-4 py-2 border border-slate-600 rounded-lg hover:bg-slate-800 transition-colors">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                                        <circle cx="12" cy="12" r="3"/>
+                                    </svg>
+                                    View Project
+                                </a>
+                                <!-- Arrow button removed -->
+                            </div>
+                        </div>
+                    </div>
                     
-                    <!-- Project 16: Project Showcase -->
+                    <!-- Project 17: Project Showcase -->
                     <div class="bg-slate-900 border border-slate-700 rounded-xl overflow-hidden card-hover flex flex-col h-full hidden more-project">
                         <div class="relative aspect-video overflow-hidden">
                             <img src="https://cdn.dribbble.com/userupload/43330865/file/original-f88e03dddfa4a682a95ccca17085f045.png?resize=1504x1533&vertical=center" alt="Photo Gallery Website" class="w-full h-full object-cover hover-scale">
@@ -1334,4 +1362,5 @@
 
 </body>
 </html>
+
 
